# fb-service-token-cache

./: .dockerignore  .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Gemfile  Makefile  README.md  app.py  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  main.go  requirements.txt
.circleci/: config.yml
.github/: dependabot.yml
app/controllers/: health_controller.rb  service_token_v2_controller.rb
app/services/: public_key_service.rb
app/services/adapters/: file_cache_adapter.rb  kubectl_adapter.rb  redis_cache_adapter.rb  shell_adapter.rb
app/services/support/: service_token_authoritative_source.rb
conf/: nginx.conf
config/: application.rb  routes.rb
config/environments/: development.rb  production.rb  test.rb
db/: schema.rb
deploy-eks/fb-service-token-cache-chart/templates/: deployment.yaml  hpa.yaml
deploy/fb-service-token-cache-chart/templates/: deployment.yaml
spec/: rails_helper.rb  spec_helper.rb
spec/controllers/: service_token_v2_controller_spec.rb  service_token_v3_controller_spec.rb
spec/services/adapters/: file_cache_adapter_spec.rb  kubectl_adapter_spec.rb  shell_adapter_spec.rb
src/: main.rs
