[package]
name = "fb-service-token-cache"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = { version = "1.0.151", features = ["derive"] }
redis = { version = "0.19.0", features = ["tls"] }
